Add BDD specs to README file and begin coding HTML form
Co-authored-by: Deryck Jackson <Dgjackson01@gmail.com>

--- a/index.html
+++ b/index.html
@@ -10,4 +10,15 @@
 
 <body>
   <h1>Roman Numerals</h1>
+  <div class="container">
+    <div>
+      <form id="formOne">
+        <div class="form-group">
+          <label for="user-number">Please input a number</label>
+          <input id="user-number" class="form-control" type="text">
+        </div>
+        <button class="btn" type="submit">Convert</button>
+      </form>
+    </div>
+  </div>
 </body>
