Complete first spec - recognize numbers as Roman numeral expressions
Co-authored-by: Deryck Jackson <Dgjackson01@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
         <button class="btn" type="submit">Convert</button>
       </form>
     </div>
+
+    <div id="output">
+      <h2>Your Roman numeral is:</h2>
+      <p><span id="roman-numeral"></span></p>
+    </div>
   </div>
 </body>
